tests/paczka1/fuzzy1/83832361.err
Error in line 7: LbzBxEC S423 14,3
Error in line 2: nP1w8Dj S609 84,9
Error in line 26: LbzBxEC S551 59,6
Error in line 38: hUrFPJh S551 -3,9
